adaptation vers backbone relational
debut de la migration vers backbone relational.... on est pas sortis du
sable

--- a/editor/templates/editor/map_editor.html
+++ b/editor/templates/editor/map_editor.html
@@ -5,12 +5,19 @@
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="{% static 'css/editor/map_editor.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/jquery_ui/jquery-ui.css' %}">
+
 	<script src="{% static 'js/jquery/jquery-1.9.1.js' %}"></script>
 	<script src="{% static 'js/jquery/jquery-ui.js' %}"></script>
+
+	<script src="{% static 'js/lib/underscore.js' %}"></script>
+	<script src="{% static 'js/lib/backbone.js' %}"></script>
+	<script src="{% static 'js/lib/backbone-relational.js' %}"></script>
+
 	<script src="{% static 'js/uiPrepare.js' %}"></script>
 	<script src="{% static 'js/Point.js' %}"></script>
 	<script src="{% static 'js/tool.js' %}"></script>
 	<script src="{% static 'js/polygon.js' %}"></script>
+	<script src="{% static 'js/Sector.js' %}"></script>
 	<script src="{% static 'js/map.js' %}"></script>
 	<script src="{% static 'js/sectorTool.js' %}"></script>
 	<script src="{% static 'js/polygonTool.js' %}"></script>
